--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <!-- Logo Başlangıcı-->
-      <a href="">LOGO</a>
+      <a href="">WEBSTUDIO</a>
       <!-- Logo Sonu-->
 
       <!-- Menü Başlangıcı-->
